Bug 1642603 - Make TransformAndClipBounds stop discarding the corner positions of empty rectangles. r=kip

Differential Revision: https://phabricator.services.mozilla.com/D79582